ADM-714[backend]refactor: delete useless method (#951)